Fixed text overflow on small devices

--- a/src/pages/anakhronos/sections/Hero/Hero.scss
+++ b/src/pages/anakhronos/sections/Hero/Hero.scss
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 2rem;
 
     @media screen and (max-width: 1000px) {
       margin-bottom: 50px;
@@ -77,6 +78,12 @@
     @media screen and (max-width: 1000px) {
       font-size: 5rem;
     }
+    @media screen and (max-width: 500px) {
+      font-size: 4.2rem;
+    }
+    @media screen and (max-width: 320px) {
+      font-size: 3.5rem;
+    }
   }
 
   &__desc {
@@ -85,7 +92,7 @@
   }
 
   &__register-btn {
-    margin-top: 35px;
+    margin-top: 10px;
     padding-block: 10px;
   }
 }
